--- a/paper-prototype/writeup.css
+++ b/paper-prototype/writeup.css
@@ -1,1 +1,21 @@
+* {
+  padding: 1em;
+  /* margin: 1em; */
+}
+p {
+  font-size: 1.5em;
+}
+.images_ {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 0.2em;
+}
+.item {
+  background-color: rgb(55, 54, 54);
+  padding: 1em;
+}
 
+img {
+  width: 100%;
+  height: 100%;
+}
